--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,89 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=greek-ext');
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     background-image: url("https://manybackgrounds.com/images/hd/starry-night-sky-dark-aesthetic-ro6a8cda8gg0zoil.jpg");
     background-position: center;
     background-origin: content-box;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
     font-family: 'Noto Sans', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
     margin: 0;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
-
 
 .text-center {
     color: #fff;
     text-transform: uppercase;
     font-size: 40px;
-    margin: -50px 0 80px 0;
-    display: block;
     text-align: center;
-    overflow-wrap: normal;
 }
 
 .box {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    max-height: 85vh; /* Adjust this value based on your design */
     background-color: rgba(0, 0, 0, 0.89);
     border-radius: 3px;
-    padding: 70px 100px;
+    padding: 50px 100px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     text-align: center;
-
 }
 
 .input-container {
     position: relative;
     margin-bottom: 25px;
+    margin-top: 25px;
     color: white;
-   
 }
 
-    .input-container label {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        font-size: 16px;
-        color: #fff;
-        pointer-event: none;
-        transition: all 0.5s ease-in-out;
-    }
+.input-container input,
+.input-container textarea {
+    border: 0;
+    border-bottom: 1px solid #555;
+    border-top: 1px solid #555;
+    border-left: 1px solid #555;
+    border-right: 1px solid #555;
+    border-radius: 3pt;
+    background: transparent;
+    width: 100%;
+    font-size: 16px;
+    color: #fff;
+    resize: none;
+    height: 100px;
+}
 
-    .input-container input {
-        border: 0;
-        border-bottom: 1px solid #555;
-        background: transparent;
-        width: 100%;
-        padding: 8px 0 5px 0;
-        font-size: 16px;
-        color: #fff;
-    }
-
-        .input-container input:focus {
-            border: none;
-            outline: none;
-            border-bottom: 1px solid #e74c3c;
-        }
+.input-container input:focus,
+.input-container textarea:focus {
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #e74c3c;
+    border-top: 3px solid #e74c3c;
+    border-left: 3px solid #e74c3c;
+    border-right: 3px solid #e74c3c;
+    border-radius: 3pt;
+}
 
 .btn {
     color: #fff;
     background-color: #e74c3c;
     outline: none;
     border: 0;
-    color: #fff;
     padding: 10px 20px;
     text-transform: uppercase;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 2px;
     cursor: pointer;
-    position: relative;
+    transition: background-color 0.3s ease;
 }
 
-.flex-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-    .button-container a {
-        color: #fff;
-        background-color: #e74c3c;
-        outline: none;
-        border: 0;
-        color: #fff;
-        padding: 15px 30px;
-        padding: 10px 20px;
-        text-transform: uppercase;
-        border-radius: 2px;
-        cursor: pointer;
-        text-decoration: none;
-        font-size: 25px;
-    }
-
-        .button-container a:hover {
-            background-color: #c0392b;
-        }
-
-/*.btn:after{
-	content:"";
-	position:absolute;
-	background:rgba(0,0,0,0.50);
-	top:0;
-	right:0;
-	width:100%;
-	height:100%;
-}*/
-.input-container input:focus ~ label,
-.input-container input:valid ~ label {
-    top: -12px;
-    font-size: 12px;
+.btn:hover {
+    background-color: #dd2b17;
 }
