--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=greek-ext');
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
 }
@@ -27,8 +28,15 @@ body {
     text-align: center;
 }
 
+.text {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
 .box {
-    max-height: 85vh; /* Adjust this value based on your design */
+    max-height: 85vh;
+    /* Adjust this value based on your design */
     background-color: rgba(0, 0, 0, 0.89);
     border-radius: 3px;
     padding: 50px 100px;
@@ -43,32 +51,32 @@ body {
     color: white;
 }
 
-.input-container input,
-.input-container textarea {
-    border: 0;
-    border-bottom: 1px solid #555;
-    border-top: 1px solid #555;
-    border-left: 1px solid #555;
-    border-right: 1px solid #555;
-    border-radius: 3pt;
-    background: transparent;
-    width: 100%;
-    font-size: 16px;
-    color: #fff;
-    resize: none;
-    height: 100px;
-}
+    .input-container input,
+    .input-container textarea {
+        border: 0;
+        border-bottom: 1px solid #555;
+        border-top: 1px solid #555;
+        border-left: 1px solid #555;
+        border-right: 1px solid #555;
+        border-radius: 3pt;
+        background: transparent;
+        width: 100%;
+        font-size: 16px;
+        color: #fff;
+        resize: none;
+        height: 100px;
+    }
 
-.input-container input:focus,
-.input-container textarea:focus {
-    border: none;
-    outline: none;
-    border-bottom: 3px solid #e74c3c;
-    border-top: 3px solid #e74c3c;
-    border-left: 3px solid #e74c3c;
-    border-right: 3px solid #e74c3c;
-    border-radius: 3pt;
-}
+        .input-container input:focus,
+        .input-container textarea:focus {
+            border: none;
+            outline: none;
+            border-bottom: 3px solid #e74c3c;
+            border-top: 3px solid #e74c3c;
+            border-left: 3px solid #e74c3c;
+            border-right: 3px solid #e74c3c;
+            border-radius: 3pt;
+        }
 
 .btn {
     color: #fff;
@@ -84,6 +92,82 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.btn:hover {
-    background-color: #dd2b17;
+    .btn:hover {
+        background-color: #dd2b17;
+    }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+input:checked + .slider {
+    background-color: #ccc;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #ccc;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
+
+.switch-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.p-r-5 {
+    padding-right: 8px;
+}
+
+.p-l-5 {
+    padding-left: 8px;
 }
